@@ -15,6 +15,7 @@
 	* added a TS viewhelper to retrieve TS values
 	* added a link viewhelper to create links on the fly
 	* added the link viewhelper to the my groups user profile widget to build links to profile pages
+	* extracted the group image into a separate group profile widget
 
 2008-09-30 Ingo Renner  <ingo@typo3.org>
 
